tests/compiletests/ui/lang/consts/u32-from-u64-fail.stderr
error[E0277]: the trait bound `u32: From<u64>` is not satisfied
  --> $DIR/u32-from-u64-fail.rs:14:17
   |
LL |     let value = u32::from(K);
   |                 ^^^ the trait `From<u64>` is not implemented for `u32`
   |
   = help: `u32` implements trait `From<T>`:
             From<Ipv4Addr>
             From<bool>
             From<char>
             From<core::ascii::Char>
             From<u16>
             From<u8>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
